<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioButton
        android:id="@+id/radioButtonSilentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/textSilentMode" />

    <RadioButton
        android:id="@+id/radioButtonVibrateMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textVibrateMode" />

    <RadioButton
        android:id="@+id/radioButtonNormalMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNormalMode" />

    <RadioButton
        android:id="@+id/radioButtonLoudMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLoudMode"
        android:visibility="gone" />

</RadioGroup>